testy jednostkowe dla pozostaÅlych metod ticketTepository